--- a/app/src/main/res/layout/activity_tryuse.xml
+++ b/app/src/main/res/layout/activity_tryuse.xml
@@ -39,10 +39,18 @@
                 android:layout_centerHorizontal="true"
                 android:layout_weight="1"
                 android:gravity="center"
-                android:text="零元抢 "
+                android:text="网红爆款 "
                 android:textColor="#ffffff"
                 android:textSize="@dimen/title_size" />
-
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_marginRight="10dp"
+                android:gravity="center_vertical"
+                android:layout_alignParentRight="true"
+                android:text="分享 "
+                android:textColor="#ffffff"
+                android:textSize="@dimen/bigtextsize" />
         </RelativeLayout>
 
     </LinearLayout>
