--- a/app/src/main/res/layout/zero_list_item.xml
+++ b/app/src/main/res/layout/zero_list_item.xml
@@ -2,99 +2,109 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical" 
     android:background="#ffffff"
-    >
+    android:orientation="vertical">
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="95dp" >
+        android:layout_height="95dp">
 
         <ImageView
             android:id="@+id/zeroitem_logo"
             android:layout_width="75dp"
             android:layout_height="75dp"
-            android:src="@mipmap/logo"
             android:layout_margin="10dp"
-            />
+            android:src="@mipmap/logo" />
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="vertical" 
+            android:layout_marginBottom="5dp"
             android:layout_marginRight="10dp"
             android:layout_marginTop="10dp"
-            android:layout_marginBottom="10dp"
-            >
+            android:orientation="vertical">
 
             <TextView
                 android:id="@+id/zeroitemtitle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textSize="@dimen/mediumsize"
-                android:textColor="@color/zhutitle"
-                android:lines="1"
                 android:ellipsize="end"
-                />
+                android:lines="1"
+                android:textColor="#333333"
+                android:textSize="@dimen/mediumsize" />
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent" >
+                android:layout_height="match_parent">
 
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:orientation="vertical" 
                     android:layout_weight="1"
-                    >
+                    android:orientation="vertical">
 
-                    <TextView
-                        android:id="@+id/zeroitem_newprice"
+                    <LinearLayout
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:textColor="@color/theme_color"
-                        android:textSize="@dimen/mediumsize"
                         android:layout_marginTop="15dp"
-                        />
+                        android:orientation="horizontal">
 
-                    <TextView
-                        android:id="@+id/zeroitem_oldprice"
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="活动价:"
+                            android:textColor="#333333"
+                            android:textSize="@dimen/smalltextsize" />
+
+                        <TextView
+                            android:id="@+id/zeroitem_newprice"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:textColor="@color/theme_color"
+                            android:textSize="@dimen/mediumsize" />
+                    </LinearLayout>
+
+                    <LinearLayout
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:textColor="@color/fuzhutitle"
-                        android:textSize="@dimen/smalltextsize"
-                        android:layout_marginTop="2dp"
-                        />
+                        android:orientation="horizontal">
 
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="原价:"
+                            android:textColor="@color/fuzhutitle"
+                            android:textSize="10sp" />
+
+                        <TextView
+                            android:id="@+id/zeroitem_oldprice"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginTop="2dp"
+                            android:textColor="@color/fuzhutitle"
+                            android:textSize="@dimen/smalltextsize" />
+                    </LinearLayout>
                 </LinearLayout>
-
-               
-
-               
 
                 <RelativeLayout
                     android:layout_width="wrap_content"
-                    android:layout_height="match_parent" >
+                    android:layout_height="match_parent">
 
-                    <ImageView
-                        android:id="@+id/zeroitem_qianggouimg"
+                    <TextView
+
+                        android:id="@+id/zeroitem_num"
                         android:layout_width="wrap_content"
-                        android:layout_height="40dp"
-                        android:layout_alignParentLeft="true"
-                        android:layout_centerVertical="true"
-                        android:src="@mipmap/handbuy" />
-
-                      <TextView
-                          android:id="@+id/zeroitem_num"
-                          android:layout_width="wrap_content"
-                          android:layout_height="wrap_content"
-                          android:layout_alignTop="@+id/zeroitem_qianggouimg"
-                          android:layout_centerHorizontal="true"
-                          android:textSize="10sp" 
-                          android:layout_marginTop="2dp"
-                          android:textColor="@color/zhutitle"
-                          />
-
+                        android:layout_height="wrap_content"
+                        android:layout_alignParentBottom="true"
+                        android:background="@drawable/button_bg_netred"
+                        android:gravity="center"
+                        android:paddingBottom="3dp"
+                        android:paddingLeft="10dp"
+                        android:paddingRight="10dp"
+                        android:paddingTop="3dp"
+                        android:text="抢购"
+                        android:textColor="#ffffff"
+                        android:textSize="@dimen/mediumsize" />
                 </RelativeLayout>
 
             </LinearLayout>
