--- a/app/src/main/res/layout/activity_tryuse.xml
+++ b/app/src/main/res/layout/activity_tryuse.xml
@@ -43,6 +43,7 @@
                 android:textColor="#ffffff"
                 android:textSize="@dimen/title_size" />
             <TextView
+                android:id="@+id/tv_share"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:layout_marginRight="10dp"
